--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "assignment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfxhho6Owdm8WgnVH8nA0k",
+      "authorship_tag": "ABX9TyMZrkZcYP4PbiTcFYaNrKXf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/pavansai26/MASK-DETECTION/blob/master/assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VRDCXOjJZfGk",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **importing the necessary libraries**"
       ]
     },
     {
@@ -44,7 +54,7 @@
         "import os\n",
         "import cv2\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,6 +64,16 @@
           ],
           "name": "stderr"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D2qfoaySaY3N",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **importing the deep learning libraries**"
       ]
     },
     {
@@ -71,8 +91,18 @@
         "from keras.layers import Conv2D,MaxPooling2D\n",
         "from keras.callbacks import ModelCheckpoint"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6YCfD459allv",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **importing the deep learning libraries**"
+      ]
     },
     {
       "cell_type": "code",
@@ -97,8 +127,18 @@
         "from tensorflow.keras.optimizers import Adam\n",
         "from keras.models import load_model"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_uWBn6Bja6SP",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **filtering the warnings**"
+      ]
     },
     {
       "cell_type": "code",
@@ -115,8 +155,18 @@
         "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
         "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d1m7o4tKbWdD",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **accessing the drive**"
+      ]
     },
     {
       "cell_type": "code",
@@ -133,7 +183,7 @@
         "from google.colab import drive\n",
         "drive.mount('/gdrive')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,6 +192,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lKGL2mIrboc5",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **giving the dataset path**"
       ]
     },
     {
@@ -154,8 +214,18 @@
       "source": [
         "data_path = '/gdrive/My Drive/dataset'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KLtTxEjyb4Ve",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **creating the labels for the data**"
+      ]
     },
     {
       "cell_type": "code",
@@ -181,7 +251,7 @@
         "print()\n",
         "print(labels)\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,6 +264,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "91J8xGlQcDwh",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **resizing the images**"
       ]
     },
     {
@@ -231,7 +311,7 @@
         "      print('Exception:',e)\n",
         "      #if any exception rasied, the exception will be printed here. And pass to the next image"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,8 +329,18 @@
         "target = np.array(target)\n",
         "\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8U4HIhcxcMeN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# convert the target into numerical"
+      ]
     },
     {
       "cell_type": "code",
@@ -262,7 +352,7 @@
       "source": [
         "new_target=np_utils.to_categorical(target)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +368,7 @@
         "np.save('target',new_target)\n",
         "#saving the target in npy format"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,8 +384,18 @@
         "target=np.load('target.npy')\n",
         "#loading the target"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KRREzClncmLq",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **model building**"
+      ]
     },
     {
       "cell_type": "code",
@@ -336,8 +436,18 @@
         "\n",
         "\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yjxhcoCGcs05",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **compiling the model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -349,8 +459,18 @@
       "source": [
         "model.compile(loss='binary_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rxzkHzbccz9h",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **printing the model summary**"
+      ]
     },
     {
       "cell_type": "code",
@@ -366,7 +486,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,6 +531,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RnOiP19sdBv-",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **installing the visualization libraries**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ZI41VLrVMgkt",
@@ -424,7 +554,7 @@
       "source": [
         "pip install pydot"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +580,7 @@
       "source": [
         "pip install graphviz"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,6 +589,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Misyd8QndNdP",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **importing the visualization libraries**"
       ]
     },
     {
@@ -472,8 +612,18 @@
         "import pydot\n",
         "import graphviz"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j7TB56MrddyK",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **visualizing the model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -490,7 +640,7 @@
         "tf.keras.utils.plot_model(model,to_file='model.jpg',show_layer_names=True,\n",
         "                          rankdir='TB',expand_nested=True,dpi=96)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,6 +658,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DeLlZL6AdmK8",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **splitting the data**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "NNafnDbIJWCN",
@@ -519,8 +679,18 @@
         "\n",
         "train_data,test_data,train_target,test_target=train_test_split(data,target,test_size=0.1)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N9oKMW5zdwiE",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **creating the check point to the model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -532,8 +702,18 @@
       "source": [
         "checkpoint = ModelCheckpoint('model-{epoch:03d}.model',monitor='val_loss',verbose=0,save_best_only=True,mode='auto')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hebMjFyed_AV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **model training**"
+      ]
     },
     {
       "cell_type": "code",
@@ -549,7 +729,7 @@
       "source": [
         "history=model.fit(train_data,train_target,epochs=30,callbacks=[checkpoint],validation_split=0.2)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +830,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -686,7 +866,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -717,7 +897,7 @@
       "source": [
         "print(model.evaluate(test_data,test_target))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,6 +910,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-Z0qGm95eQMo",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **saving the model**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "FycIqiDlTDby",
@@ -739,7 +929,7 @@
       "source": [
         "model.save('trainedmodel.h5')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +947,7 @@
         "labels_dict={0:'with_mask',1:'without_mask'}\n",
         "color_dict={0:(0,255,0),1:(0,0,255)}"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,7 +960,7 @@
       "source": [
         "from google.colab.patches import cv2_imshow"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -783,7 +973,7 @@
       "source": [
         "source=cv2.VideoCapture('/gdrive/My Drive/sample_videos/3.mp4')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
